--- a/spacex/templates/index.html
+++ b/spacex/templates/index.html
@@ -1,22 +1,50 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/style.css') }}">
+</head>
+
+
+
 <body>
-    <h1> Time laaaeft:</h1>
-    <div>
-        <h1> sssssssssss laaaeft:</h1>
-    </div>
+    <section>
+        <div class="flexbox">
+            <div class="item">
+                <div class="content">
+                    <p id="days">{{ days }}</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <p id="hours">{{ hours }}</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <p id="mins">{{ mins }}</p>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <p id="secs">{{ secs }}</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
-    <p id='days'>{{days}}</p>
-    <p id='hours'>{{hours}}</p>
-    <p id='mins'>{{mins}}</p>
-    <p id='secs'>{{secs}}</p>
-    <button onclick="server.refresh()">..aaaaaaaaaa..</button>
+
+
+
+
+
+
+
     <script>
         var x = window.setInterval(function () {
             server.refresh()
-        }, 1000)
+        }, 900)
     </script>
 </body>
 
